corpus/import.txt
================================================================================
Import
================================================================================

syntax = "proto3";

import "foo.proto";

--------------------------------------------------------------------------------

(source_file
  (syntax)
  (import
    (string)))

================================================================================
Import weak
================================================================================

syntax = "proto3";

import weak "foo.proto";

--------------------------------------------------------------------------------

(source_file
  (syntax)
  (import
    (string)))

================================================================================
Import public
================================================================================

syntax = "proto3";

import public "foo.proto";

--------------------------------------------------------------------------------

(source_file
  (syntax)
  (import
    (string)))

================================================================================
Import with escapes
================================================================================

syntax = "proto3";

import 'bar\'.proto';
import public "foo\".proto";

--------------------------------------------------------------------------------

(source_file
  (syntax)
  (import
    (string
      (escape_sequence)))
  (import
    (string
      (escape_sequence))))
